--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             <div class="text-md-center">
               <div class="row">
                 <div class="col">
-                  <img src="./images/logo_HTML.png" class="rounded" height="100px">
+                  <img src="./images/skills/logo_HTML.png" class="rounded" height="100px">
                 </div>
                 <div class="col">
-                  <img src="./images/logo_CSS.png" class="rounded" height="100px">
+                  <img src="./images/skills/logo_CSS.png" class="rounded" height="100px">
                 </div>
                 <div class="col">
-                  <img src="./images/logo_JS.png" class="rounded" height="100px">
+                  <img src="./images/skills/logo_JS.png" class="rounded" height="100px">
                 </div>
               </div>            
             </div>
@@ -60,17 +60,17 @@
             <div class="text-md-center">
               <div class="row">
                 <div class="col">
-                  <img src="./images/logo_VueJS.png" class="rounded" height="70px">
+                  <img src="./images/skills/logo_VueJS.png" class="rounded" height="70px">
                 </div>
                 <div class="col">
-                  <img src="./images/logo_Vuetify.png" class="rounded" height="70px">
+                  <img src="./images/skills/logo_Vuetify.png" class="rounded" height="70px">
                 </div>
               </div>            
             </div>
             <div class="text-md-center">
               <div class="row">
                 <div class="col">
-                  <img src="./images/logo_Java.png" class="rounded" height="150px">
+                  <img src="./images/skills/logo_Java.png" class="rounded" height="150px">
                 </div>
               </div>            
             </div>
@@ -88,7 +88,27 @@
           <section class="container" id="experience">
             <h1 class="display-6">Experiences</h1>
             <div class="text-md-center">
-              <img src="./images/logo_TECHNIA.png" class="rounded" height="100px">
+              <p>2015 - 2017</p>
+              <img src="./images/companies/logo_Capgemini.png" class="rounded" height="100px">
+              <br>
+              <p><mark>2017 - present</mark></p>
+              <img src="./images/companies/logo_TECHNIA.png" class="rounded" height="100px">
+            </div>
+            <br>
+            <br>
+            <div class="text-md-center">
+              <p>Worked with</p>
+              <div class="row">
+                <div class="col">
+                  <img src="./images/companies/logo_PSA.png" class="rounded" height="50px">
+                </div>
+                <div class="col">
+                  <img src="./images/companies/logo_DS.png" class="rounded" height="50px">
+                </div>
+                <div class="col">
+                  <img src="./images/companies/logo_DA.png" class="rounded" height="50px">
+                </div>
+              </div>            
             </div>
           </section>
           <br>
@@ -111,7 +131,7 @@
                 <textarea class="form-control" id="messageText" placeholder="Write your message" style="height: 100px"></textarea>
               </div>
               <br>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" disabled class="btn btn-primary">Submit</button>
             </form>
           </section>
     </body>
